# BSPEC

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
requirements/: common.txt  dev.txt
src/bspec/: app.py  demo_config.json
src/bspec/common_core/: dynamic_module_install.py  read_module_requirements.py
src/bspec/components/: component_factory.py
src/bspec/components/blockchain/: blockchain.py
src/bspec/components/blockchain_block/: blockchain_block.py
src/bspec/components/blockchain_transaction/: blockchain_transaction.py
src/bspec/components/dash_ui/: dash_ui.py
src/bspec/components/flask_app/: flask_app.py
src/bspec/components/flask_ui/: flask_ui.py
src/bspec/components/input_file_csv/: input_file_csv.py
src/bspec/components/pd_dataframe/: pd_dataframes.py
src/bspec/components/pd_input_dropna/: pd_input_dropna.py
src/bspec/components/pd_input_file_csv/: pd_input_file_csv.py
src/bspec/components/runtime_debug_print/: runtime_debug_print.py
src/bspec/pipelines/: recursive_pipeline_read.py
src/bspec/pipelines/pd_read_and_clean_csv/: pipeline.json  pipeline.py
src/bspec/plugin_core/: loader.py  plugin_module_interface.py
src/bspec/processors/: processor_factory.py
src/bspec/processors/dash_app/: dash_component_factory.py  processor.py
src/bspec/processors/dash_app/requirements/: module_requirements.txt
src/bspec/processors/flask_app/: processor.py
src/bspec/processors/pd_dropna/: processor.py
src/bspec/processors/pd_read_csv/: processor.py
src/bspec/universe/: universe.py
